--- a/bio/copy.css
+++ b/bio/copy.css
@@ -9,7 +9,7 @@
   src: url(../fonts/Fudged.ttf);
 }
 .ribbon {
-   border: 2px inset #cc00ff;
+   border: 2px inset #14fdce;
 }
 #cqqq {
     position: relative;
@@ -43,7 +43,7 @@
 }
 body {
   background: #383838;
-  color: #cc00ff;
+  color: #14fdce;
   font-family: 'VT323';
   font-size: 24px;
   -webkit-font-smoothing: none;
@@ -66,15 +66,15 @@ p {
 }
 a,
 a:visited {
-  border-bottom: 0.2rem solid #cc00ff;
-  color: #cc00ff;
+  border-bottom: 0.2rem solid #14fdce;
+  color: #14fdce;
   text-decoration: none;
 }
 a:active,
 a:focus,
 a:hover {
-  background-color: #cc00ff;
-  color: #1e0318;
+  background-color: #14fdce;
+  color: #031e11;
 }
 .piece {
   display: block;
@@ -94,7 +94,7 @@ a:hover {
   border-left-color: #080808;
   border-right-color: #080808;
   border-top-color: #020202;
-  box-shadow: inset 0 0 11rem black,
+  box-shadow: inset 0 0 18rem black,
     inset 0 0 3rem black,
     0 0 10rem black;
   height: 96%;
@@ -122,13 +122,14 @@ a:hover {
           transform: translate(-50%);
 }
 .output {
-
-  background-color: #1e0318;
+  -webkit-animation: crt-output 10ms infinite;
+          animation: crt-output 10ms infinite;
+  background-color: #031e11;
   overflow: scroll;
   position: absolute;
   padding: 3rem 2rem;
   pointer-events: auto;
-  text-shadow: 0rem 0.2rem 1rem #650c7b;
+  text-shadow: 0rem 0.2rem 1rem #0c7b46;
   z-index: -1;
 }
 @-webkit-keyframes crt-output {
@@ -157,7 +158,7 @@ a:hover {
 .glow {
   -webkit-animation: crt-glow 60s infinite;
           animation: crt-glow 60s infinite;
-  background: radial-gradient(circle at center, #a91bd4 0%, rgba(159, 27, 212, 0.88) 58%, rgba(192, 21, 235, 0.57) 80%, rgba(79, 19, 94, 0.27) 93%, rgba(21, 10, 23, 0) 100%);
+  background: radial-gradient(circle at center, #1bd459 0%, rgba(27, 212, 89, 0.88) 58%, rgba(21, 235, 92, 0.57) 80%, rgba(19, 94, 29, 0.27) 93%, rgba(10, 23, 12, 0) 100%);
   opacity: 0.15;
   pointer-events: none;
   position: fixed;
@@ -179,12 +180,12 @@ a:hover {
   }
 }
 ::-moz-selection {
-  background-color: #cc00ff;
-  color: #1e0318;
+  background-color: #14fdce;
+  color: #031e11;
 }
 ::selection {
-  background-color: #cc00ff;
-  color: #1e0318;
+  background-color: #14fdce;
+  color: #031e11;
 }
 @font-face {
   font-family: 'uuxsl';
