--- a/bio/bio.css
+++ b/bio/bio.css
@@ -66,14 +66,14 @@ p {
 }
 a,
 a:visited {
-  border-bottom: 0.2rem solid #6200ff;
-  color: #6200ff;
+  border-bottom: 0.2rem solid #c414b5;
+  color: #c414b5;
   text-decoration: none;
 }
 a:active,
 a:focus,
 a:hover {
-  background-color: #6200ff;
+  background-color: #c414b5;
   color: #1e0318;
 }
 .colorr {
